--- a/app/views/error_events/new.html.erb
+++ b/app/views/error_events/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New error_event</h1>
+<h1>New Error Event</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', server_error_events_path(@error_event.server) %>
+<br />
+<%= link_to '<< Back', server_error_events_path(@error_event.server), class: "btn btn-primary" %>
