--- a/app/views/apikeys/index.html.erb
+++ b/app/views/apikeys/index.html.erb
@@ -1,24 +1,24 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Apikeys</h1>
+<h1>API Keys</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Publickey</th>
-      <th>Privatekey</th>
-      <th colspan="3"></th>
+      <th class="col-xs-3">Public Key</th>
+      <th class="col-xs-3">Private Key</th>
+      <th class="col-xs-6" colspan="3">Actions</th>
     </tr>
   </thead>
 
   <tbody>
     <% @apikeys.each do |apikey| %>
       <tr>
-        <td><%= apikey.publickey %></td>
-        <td><%= apikey.privatekey %></td>
-        <td><%= link_to 'Show', apikey %></td>
-        <td><%= link_to 'Edit', edit_apikey_path(apikey) %></td>
-        <td><%= link_to 'Destroy', apikey, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="col-xs-3"><%= apikey.publickey %></td>
+        <td class="col-xs-3"><%= apikey.privatekey %></td>
+        <td class="col-xs-2"><%= link_to 'Show', apikey, class: "btn btn-primary" %></td>
+        <td class="col-xs-2"><%= link_to 'Edit', edit_apikey_path(apikey), class: "btn btn-info" %></td>
+        <td class="col-xs-2"><%= link_to 'Destroy', apikey, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger"  %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Apikey', new_apikey_path %>
+<%= link_to 'New Apikey', new_apikey_path, class: "btn btn-success" %>
