--- a/app/views/data_values/index.html.erb
+++ b/app/views/data_values/index.html.erb
@@ -1,25 +1,25 @@
-<h1>Listing data_values</h1>
+<h1>Listing Data Values for <%= @server.name %></h1>
 
 <table>
   <tr>
-    <th>Name</th>
-    <th>Value</th>
-    <th></th>
-    <th></th>
-    <th></th>
+    <th class="col-xs-3">Name</th>
+    <th class="col-xs-3">Value</th>
+    <th class="col-xs-6" colspan="3">Actions</th>
   </tr>
 
 <% @data_values.each do |data_value| %>
   <tr>
-    <td><%= data_value.name %></td>
-    <td><%= data_value.value %></td>
-    <td><%= link_to 'Show', [data_value.server, data_value] %></td>
-    <td><%= link_to 'Edit', edit_server_data_value_path(data_value.server, data_value) %></td>
-    <td><%= link_to 'Destroy', [data_value.server, data_value], :confirm => 'Are you sure?', :method => :delete %></td>
+    <td class="col-xs-3"><%= data_value.name %></td>
+    <td class="col-xs-3"><%= data_value.value %></td>
+    <td class="col-xs-2"><%= link_to 'Show', [data_value.server, data_value], class: "btn btn-primary" %></td>
+    <td class="col-xs-2"><%= link_to 'Edit', edit_server_data_value_path(data_value.server, data_value), class: "btn btn-info" %></td>
+    <td class="col-xs-2"><%= link_to 'Destroy', [data_value.server, data_value], data: { confirm: 'Are you sure?' }, :method => :delete, class: "btn btn-danger" %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Data value', new_server_data_value_path(params[:server_id]) %>
+<%= link_to 'New Data value', new_server_data_value_path(params[:server_id]), class: "btn btn-success" %>
+<br /><br />
+<%= link_to '<< Back to Server', @server, class: "btn btn-default" %>
