--- a/app/views/data_values/new.html.erb
+++ b/app/views/data_values/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New data_value</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', server_data_values_path(@data_value.server) %>
+<br />
+<%= link_to '<< Back', server_data_values_path(@data_value.server), class: "btn btn-primary" %>
