--- a/app/views/data_values/show.html.erb
+++ b/app/views/data_values/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <b>Name:</b>
   <%= @data_value.name %>
@@ -11,5 +9,6 @@
 </p>
 
 
-<%= link_to 'Edit', edit_server_data_value_path(@data_value.server, @data_value) %> |
-<%= link_to 'Back', server_data_values_path(@data_value.server) %>
+<%= link_to 'Edit', edit_server_data_value_path(@data_value.server, @data_value), class: "btn btn-info" %>
+<br /><br />
+<%= link_to '<< Back', server_data_values_path(@data_value.server), class: "btn btn-primary" %>
