--- a/app/views/servers/index.html.erb
+++ b/app/views/servers/index.html.erb
@@ -1,30 +1,27 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Servers</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
-      <th>Ipaddress</th>
-      <th>Hostname</th>
-      <th>Loginname</th>
-      <th>Loginpassword</th>
-      <th colspan="3"></th>
+      <th>IP Address</th>
+      <th>Host Name</th>
+      <th>Login Name</th>
+      <th>Login Password</th>
+      <th colspan="2">Actions</th>
     </tr>
   </thead>
 
   <tbody>
     <% @servers.each do |server| %>
       <tr>
-        <td><%= server.name %></td>
+        <td><%= link_to server.name, server %></td>
         <td><%= server.ipaddress %></td>
         <td><%= server.hostname %></td>
         <td><%= server.loginname %></td>
         <td><%= server.loginpassword %></td>
-        <td><%= link_to 'Show', server %></td>
-        <td><%= link_to 'Edit', edit_server_path(server) %></td>
-        <td><%= link_to 'Destroy', server, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit', edit_server_path(server), class: "btn btn-primary" %></td>
+        <td><%= link_to 'Destroy', server, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -32,4 +29,4 @@
 
 <br>
 
-<%= link_to 'New Server', new_server_path %>
+<%= link_to 'New Server', new_server_path, class: "btn btn-success" %>
