--- a/app/views/servers/new.html.erb
+++ b/app/views/servers/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Server</h1>
 
 <%= render 'form', server: @server %>
-
-<%= link_to 'Back', servers_path %>
+<br />
+<%= link_to '<< Back', servers_path, class: "btn btn-default" %>
