--- a/app/views/apikeys/edit.html.erb
+++ b/app/views/apikeys/edit.html.erb
@@ -2,6 +2,7 @@
 
 <%= render 'form', apikey: @apikey %>
 <br />
+<button onclick="genApiKey()" class="btn btn-info">Regenerate API Keys</button>
 <%= link_to 'Show', @apikey, class: "btn btn-primary" %>
 <br /><br />
 <%= link_to '<< Back', apikeys_path, class: "btn btn-primary" %>
