Fixed layout, added validation to models, fixed server form

--- a/app/views/servers/_form.html.erb
+++ b/app/views/servers/_form.html.erb
@@ -37,6 +37,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Update Server", class: "btn btn-warning" %>
+    <%= f.submit "Create/Update Server", class: "btn btn-warning" %>
   </div>
 <% end %>
